--- a/PL/main volunteer/CallDescriptionWindow.xaml
+++ b/PL/main volunteer/CallDescriptionWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="PL.main_volunteer.CallDescriptionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Call Description" Height="400" Width="600"
-        Loaded="Window_Loaded">
+        Title="Call Description" Height="400" Width="600">
+        <!--Loaded="Window_Loaded">-->
     <DockPanel>
         <TextBlock DockPanel.Dock="Top" 
                   FontSize="20" 
@@ -15,8 +15,8 @@
                   FontSize="16" 
                   Margin="10" 
                   TextWrapping="Wrap"/>
-        <WebBrowser DockPanel.Dock="Top" 
+        <!--<WebBrowser DockPanel.Dock="Top" 
                     Name="MapBrowser"
-                    Height="300"/>
+                    Height="300"/>-->
     </DockPanel>
 </Window>
