--- a/PL/Call/CallWindow.xaml
+++ b/PL/Call/CallWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:PL.Call"
         mc:Ignorable="d"
         Title="Call Management" Height="640" Width="800"
-        Background="#F5F5F5">
+        Background="#F5F5F5"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}">
+
 
     <Window.Resources>
         <Style TargetType="Label">
