simulator workimg half power

--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -125,13 +125,7 @@
                     Background="#8E44AD"
                     Foreground="White"
                     BorderThickness="0"/>
-            <Button Content="Simulator" 
-                    Click="StartSimulator_Click"
-                    Margin="5"
-                    Padding="15,10"
-                    Background="#16A085"
-                    Foreground="White"
-                    BorderThickness="0"/>
+           
         </StackPanel>
 
         <!-- Simulator Controls -->
@@ -154,6 +148,9 @@
                     Click="StartSimulator_Click"
                     Margin="5,0"
                     Padding="15,10"
+                   Background="#16A085"
+                   Foreground="White"
+                    BorderThickness="0"
                     VerticalAlignment="Center"/>
         </StackPanel>
 
