--- a/PL/main volunteer/VolunteerMainWindow.xaml
+++ b/PL/main volunteer/VolunteerMainWindow.xaml
@@ -10,14 +10,14 @@
     <Grid>
         <!-- Name -->
         <StackPanel Orientation="Horizontal" Margin="10,10,0,0" VerticalAlignment="Top">
-            <TextBlock Text="Name:" FontSize="14" VerticalAlignment="Center"/>
+            <TextBlock Width="120" Text="Name:" FontSize="14" VerticalAlignment="Center"/>
             <TextBox Text="{Binding Volunteer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="244"/>
         </StackPanel>
 
         <!-- Id -->
         <StackPanel Orientation="Horizontal" Margin="10,40,0,0" VerticalAlignment="Top">
-            <TextBlock Text="ID:" FontSize="14" VerticalAlignment="Center"/>
+            <TextBlock Width="120" Text="ID:" FontSize="14" VerticalAlignment="Center"/>
             <TextBox Text="{Binding Volunteer.Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="244" 
                      IsReadOnly="True"/>
@@ -25,7 +25,7 @@
 
         <!-- Phone -->
         <StackPanel Orientation="Horizontal" Margin="10,70,0,0" VerticalAlignment="Top">
-            <TextBlock Text="Phone:" FontSize="14" VerticalAlignment="Center"/>
+            <TextBlock Width="80" Text="Phone:" FontSize="14" VerticalAlignment="Center"/>
             <TextBox Text="{Binding Volunteer.Number_phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="241"/>
         </StackPanel>
