--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -44,6 +44,7 @@
                     Padding="15,10"
                     Background="#3498DB"
                     Foreground="White"
+                    IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                     BorderThickness="0"/>
             <Button Content="Add One Hour" 
                     Click="AddOneHour_Click" 
@@ -51,6 +52,7 @@
                     Padding="15,10"
                     Background="#3498DB"
                     Foreground="White"
+                    IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                     BorderThickness="0"/>
             <Button Content="Add One Day" 
                     Click="AddOneDay_Click" 
@@ -58,6 +60,7 @@
                     Padding="15,10"
                     Background="#3498DB"
                     Foreground="White"
+                    IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                     BorderThickness="0"/>
             <Button Content="Add One Month" 
                     Click="AddOneMonth_Click" 
@@ -65,6 +68,7 @@
                     Padding="15,10"
                     Background="#3498DB"
                     Foreground="White"
+                    IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                     BorderThickness="0"/>
             <Button Content="Add One Year" 
                     Click="AddOneYear_Click" 
@@ -72,6 +76,7 @@
                     Padding="15,10"
                     Background="#3498DB"
                     Foreground="White"
+                    IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                     BorderThickness="0"/>
         </StackPanel>
 
@@ -125,7 +130,13 @@
                     Background="#8E44AD"
                     Foreground="White"
                     BorderThickness="0"/>
-           
+            <Button Content="Simulator" 
+                    Click="StartSimulator_Click"
+                    Margin="5"
+                    Padding="15,10"
+                    Background="#16A085"
+                    Foreground="White"
+                    BorderThickness="0"/>
         </StackPanel>
 
         <!-- Simulator Controls -->
@@ -143,14 +154,12 @@
                      VerticalAlignment="Center"
                      Padding="5"
                      Margin="5,0"
+                     IsEnabled="{Binding IsSimulatorRunning, Converter={StaticResource InverseBooleanConverterKey}}"
                      TextChanged="TextBox_TextChanged"/>
             <Button Content="{Binding IsSimulatorRunning, Converter={StaticResource ConverterSimulatorStateKey}}"
                     Click="StartSimulator_Click"
                     Margin="5,0"
                     Padding="15,10"
-                   Background="#16A085"
-                   Foreground="White"
-                    BorderThickness="0"
                     VerticalAlignment="Center"/>
         </StackPanel>
 
