BONUS we did togeher :) goody and bey

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -25,6 +25,7 @@
         <local:ConvertUpdateToTrueKey x:Key="ConvertUpdateToTrueKey"/>
         <local:ConvertUpdateToVisibleKey x:Key="ConvertUpdateToVisibleKey"/>
         <local:InverseBooleanConverter x:Key="InverseBooleanConverterKey"/>
+        <local:ConvertIsCanDeletCall x:Key="ConvertIsCanDeletCallKey"/>
 
 
         <!-- Define the Back Button Style for bake click-->
