--- a/PL/login/LoginSystem.xaml
+++ b/PL/login/LoginSystem.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PL"
+        KeyDown="Window_KeyDown"
                 Closed="Window_Closed"
     Title="Login System" Height="450" Width="800">
 
