--- a/PL/main volunteer/VolunteerHistoryWindow.xaml
+++ b/PL/main volunteer/VolunteerHistoryWindow.xaml
@@ -7,34 +7,39 @@
 
         <!-- כותרת עם טריגר למעבר עכבר -->
         <TextBlock DockPanel.Dock="Top" 
-                  Text="Volunteer Call History"
-                  FontSize="20" 
-                  FontWeight="Bold" 
-                  HorizontalAlignment="Center" 
-                  Margin="10">
-            <TextBlock.Triggers>
-                <EventTrigger RoutedEvent="MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <ColorAnimation 
+           Text="Volunteer Call History"
+           FontSize="20" 
+           FontWeight="Bold" 
+           HorizontalAlignment="Center" 
+           Margin="10">
+            <TextBlock.Style>
+                <Style TargetType="TextBlock">
+                    <Style.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation 
                                 Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
                                 To="#4DA1A9" 
                                 Duration="0:0:0.2"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <ColorAnimation 
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation 
                                 Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
                                 To="Black" 
                                 Duration="0:0:0.2"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </TextBlock.Triggers>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
         </TextBlock>
+
 
 
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10" Width="470">
